Use stuff algorithm